--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,36 @@
 font-family: "JetBrains Mono", monospace;
   font-optical-sizing: auto;
   font-style: normal;
+  
 }
 
+
+body{
+color: #0F0326;;
+}
 
 .main{
     margin: auto;
     height: 800px;
     width: 600px;
-    background-color: rgba(133,162,175,255);
+    background-color: #b5d99c;
     
 }
 
 .shadow{
-    box-shadow: 0 4px 8px -6px rgba(133,162,175,255);
+    box-shadow: 0 4px 8px -6px #b5d99c;
 }
 
 .recompensas{
-    background-color: rgba(160,67,55,255);
+    background-color: #E65F5C;
+}
+
+.recompensa{
+    background-color: #ffff82;
 }
 
 #calendario-dias{
+    background-color: #0F0326;
     width: 100%;
     height: 77%;
     display: grid;
@@ -35,6 +45,7 @@ font-family: "JetBrains Mono", monospace;
     padding: 0.5rem 1rem;
     border: 1px solid black;
     border-radius: 25px;
+    background-color: #E65F5C;
     
 }
 .button-alike:hover{
@@ -51,4 +62,25 @@ font-family: "JetBrains Mono", monospace;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     row-gap: 0.2rem;
     column-gap: 0.5rem;
+}
+
+
+.main-day{
+    width: 100%; 
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffff82;
+}
+.main-day:hover{
+    cursor: pointer;
+    background-color: #f7f702;
+}
+
+.tarefa{
+    background-color: #ffff82;
+    border-width: 1px;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem
+
 }
